19maps_MCDO_36yrtraining_RMMERA5_filtered_trop/slurm-3851277.out

The following have been reloaded with a version change:
  1) cudatoolkit/11.7 => cudatoolkit/11.5

1
1
logRMM_7mapstrop_dailyinput_mem1d_lead1
Traceback (most recent call last):
  File "/global/u1/l/linyaoly/ERA5/script/Unet4MJO/19maps_MCDO_36yrtraining_RMMERA5_filtered_trop/Unet4MJO_loop.py", line 13, in <module>
    from data_loader_loop import load_test_data
  File "/global/u1/l/linyaoly/ERA5/script/Unet4MJO/19maps_MCDO_36yrtraining_RMMERA5_filtered_trop/data_loader_loop.py", line 23
    print(Fn)
    ^
SyntaxError: invalid syntax
srun: error: nid001561: task 0: Exited with exit code 1
srun: launch/slurm: _step_signal: Terminating StepId=3851277.0
